--- a/ApexSpecialistSuperbadge/force-app/main/default/classes/WarehouseSyncSchedule.cls
+++ b/ApexSpecialistSuperbadge/force-app/main/default/classes/WarehouseSyncSchedule.cls
@@ -1,3 +1,6 @@
-public with sharing class WarehouseSyncSchedule {
-    // implement scheduled code here
+public class WarehouseSyncSchedule implements Schedulable {
+    public void execute(SchedulableContext ctx) {
+        
+        WarehouseCalloutService.runWarehouseEquipmentSync();
+    }
 }
